<resources>
    <string name="app_name">Snap</string>
    <string name="functionality_not_supported">Functionality not yet supported!</string>

    <string name="title_activity_overview">Overview</string>
    <string name="title_activity_week">Last 7 Days</string>
    <string name="title_activity_month">Current Month</string>
    <string name="title_activity_daily">Daily Activity</string>
    <string name="most_active_day">Most Active Day</string>
    <string name="x_actions">x actions</string>
    <string name="least_active_day">Least Active Day</string>
    <string name="most_up_day">Most Up Day</string>
    <string name="most_down_day">Most Down Day</string>

    <string name="name_of_day">Wednesday</string>
    <string name="date">01.02.16</string>

    <string name="action_delete_text">Hide Click?</string>
    <string name="action_restore_text">Restore Click?</string>
    <string name="action_button_delete_text">Yes, Hide!</string>
    <string name="action_button_restore_text">Yes, Restore!</string>

    <string name="app_version">v0.3.8</string>
    <string name="action_icon_description">Icon</string>
    <string name="click_time_textview">time</string>
    <string name="click_item_location_textview">Location</string>

    <string name="menu_month">Month View</string>
    <string name="menu_week">Last 7 Days</string>
    <string name="menu_hourly">Hourly Analysis</string>
    <string name="menu_refresh">Refresh</string>
</resources>
