<?xml version="1.0" encoding="utf-8" ?>
<com.daimajia.swipe.SwipeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:swipe="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    swipe:leftEdgeSwipeOffset="0dp"
    swipe:rightEdgeSwipeOffset="0dp">


    <LinearLayout
        android:id="@+id/action_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/clasp_colour"
        android:gravity="center"
        android:tag="Bottom3"
        android:weightSum="10">

        <ImageView
            android:id="@+id/action_icon"
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:contentDescription="@string/action_icon_description" />

        <TextView
            android:id="@+id/action_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:textColor="#fff"
            android:textSize="20sp" />

        <Button
            android:id="@+id/action_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="4"
            android:background="@drawable/white"
            android:textSize="20sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/date_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/white"
        android:paddingBottom="5dp"
        android:paddingStart="5dp"
        android:paddingTop="5dp">

        <TextView
            android:id="@+id/hour_min_sec_tv"
            fontPath="fonts/digital-7-mono.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/down_primary"
            android:gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/click_time_textview"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textSize="50sp" />

        <TextView
            android:id="@+id/location_tv"
            fontPath="fonts/Lato-Light.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/hour_min_sec_tv"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@+id/hour_min_sec_tv"
            android:layout_marginBottom="-2dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_toEndOf="@+id/hour_min_sec_tv"
            android:text="@string/click_item_location_textview"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/Black"
            android:textSize="14sp" />
    </RelativeLayout>

</com.daimajia.swipe.SwipeLayout>