<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/final_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:ignore="MissingPrefix">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/relativeLayout"
        android:layout_marginStart="5dp"
        android:layout_marginTop="-5dp"
        android:layout_toEndOf="@+id/relativeLayout"
        android:text="@string/most_active_day"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/clasp_colour"
        android:textSize="31sp" />

    <TextView
        android:id="@+id/tv_mad_actions"
        fontPath="fonts/Lato-Light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout"
        android:layout_alignStart="@+id/textView1"
        android:layout_marginBottom="8dp"
        android:text="@string/x_actions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_brown"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_mad_actions"
        android:layout_alignTop="@+id/relativeLayout2"
        android:layout_marginTop="-5dp"
        android:text="@string/least_active_day"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/clasp_colour"
        android:textSize="31sp" />

    <TextView
        android:id="@+id/tv_lad_actions"
        fontPath="fonts/Lato-Light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout2"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginBottom="8dp"
        android:text="@string/x_actions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_brown"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_lad_actions"
        android:layout_alignTop="@+id/relativeLayout3"
        android:layout_marginTop="-5dp"
        android:text="@string/most_up_day"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/up_primary"
        android:textSize="31sp" />

    <TextView
        android:id="@+id/tv_hd_actions"
        fontPath="fonts/Lato-Light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout3"
        android:layout_alignStart="@+id/textView3"
        android:layout_marginBottom="8dp"
        android:text="@string/x_actions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_brown"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/tv_hd_actions"
        android:layout_alignTop="@+id/relativeLayout4"
        android:layout_marginTop="-5dp"
        android:text="@string/most_down_day"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/down_primary"
        android:textSize="31sp" />

    <TextView
        android:id="@+id/tv_sd_actions"
        fontPath="fonts/Lato-Light.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/relativeLayout4"
        android:layout_alignStart="@+id/textView4"
        android:layout_marginBottom="8dp"
        android:text="@string/x_actions"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/dark_brown"
        android:textSize="26sp" />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
        <!--android:text="This week's stats"-->
        <!--android:id="@+id/textView8"-->
        <!--android:textSize="36sp"-->
        <!--android:textColor="@color/clasp_colour"-->
        <!--android:layout_above="@+id/tableLayout1"-->
        <!--android:gravity="center_vertical|center_horizontal"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:visibility="invisible"/>-->

    <!--<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
        <!--android:id="@+id/tableLayout1"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="50dp"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_margin="5dp"-->
        <!--android:visibility="invisible">-->

        <!--<TableRow-->
            <!--android:id="@+id/tableRow1"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_weight="1" >-->

            <!--<Button-->
                <!--android:id="@+id/mondayBtn"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:text="Mo"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="20sp"-->
                <!--android:gravity="center_vertical|center_horizontal"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/button_accept" />-->

            <!--<Space android:layout_width="2dp" />-->

            <!--<Button-->
                <!--android:id="@+id/tuesdayBtn"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:text="Tu"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="20sp"-->
                <!--android:gravity="center_vertical|center_horizontal"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/button_accept" />-->

            <!--<Space android:layout_width="2dp" />-->

            <!--<Button-->
                <!--android:id="@+id/wednesdayBtn"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:text="We"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="20sp"-->
                <!--android:gravity="center_vertical|center_horizontal"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/button_accept"/>-->

            <!--<Space android:layout_width="2dp" />-->

            <!--<Button-->
                <!--android:id="@+id/thursdayBtn"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:text="Th"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="20sp"-->
                <!--android:gravity="center_vertical|center_horizontal"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/button_accept"/>-->

            <!--<Space android:layout_width="2dp" />-->

            <!--<Button-->
                <!--android:id="@+id/fridayBtn"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:text="Fr"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="20sp"-->
                <!--android:gravity="center_vertical|center_horizontal"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/button_accept"/>-->

            <!--<Space android:layout_width="2dp" />-->

            <!--<Button-->
                <!--android:id="@+id/saturdayBtn"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:text="Sa"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="20sp"-->
                <!--android:gravity="center_vertical|center_horizontal"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/button_accept"-->
                <!--android:clickable="false"/>-->

            <!--<Space android:layout_width="2dp"-->
                <!--android:background="@drawable/button_accept"/>-->

            <!--<Button-->
                <!--android:id="@+id/sundayBtn"-->
                <!--android:layout_height="fill_parent"-->
                <!--android:layout_width="fill_parent"-->
                <!--android:text="Su"-->
                <!--android:textColor="#fff"-->
                <!--android:textSize="20sp"-->
                <!--android:gravity="center_vertical|center_horizontal"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/button_accept"/>-->
        <!--</TableRow>-->
    <!--</TableLayout>-->

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="85dp"
        android:layout_height="76dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/calendar_icon_clasp_small"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_mad_month"
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/sept_15"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_mad_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_mad_month"
            android:gravity="center|center_horizontal"
            android:text="@string/x_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_brown"
            android:textSize="42sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="85dp"
        android:layout_height="76dp"
        android:layout_alignStart="@+id/relativeLayout"
        android:layout_below="@+id/tv_mad_actions"
        android:layout_marginTop="10dp"
        android:background="@drawable/calendar_icon_clasp_small"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_lad_month"
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/x_number"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_lad_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_lad_month"
            android:gravity="center|center_horizontal"
            android:text="@string/x_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_brown"
            android:textSize="42sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="85dp"
        android:layout_height="76dp"
        android:layout_alignStart="@+id/relativeLayout2"
        android:layout_below="@+id/relativeLayout2"
        android:layout_marginTop="10dp"
        android:background="@drawable/calendar_icon_up_small"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_hd_month"
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/x_number"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_hd_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_hd_month"
            android:gravity="center|center_horizontal"
            android:text="@string/x_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_brown"
            android:textSize="42sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout4"
        android:layout_width="85dp"
        android:layout_height="76dp"
        android:layout_alignStart="@+id/relativeLayout3"
        android:layout_below="@+id/tv_hd_actions"
        android:layout_marginTop="10dp"
        android:background="@drawable/calendar_icon_down_small"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_sd_month"
            android:layout_width="fill_parent"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/x_number"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/White"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_sd_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_sd_month"
            android:gravity="center|center_horizontal"
            android:text="@string/x_number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/dark_brown"
            android:textSize="42sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="5dp"
        android:layout_marginEnd="5dp"
        android:text="@string/app_version"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>